fix: improve readability on input placeholders - fixed #1974

--- a/packages/hoppscotch-app/assets/scss/styles.scss
+++ b/packages/hoppscotch-app/assets/scss/styles.scss
@@ -38,7 +38,7 @@
 input::placeholder,
 textarea::placeholder {
   @apply text-secondary;
-  @apply opacity-25;
+  @apply opacity-35;
 }
 
 input,
